# G3d

./: .gitmodules  CMakeLists.txt
include/: sdk_ver.h
include/nw/g3d/: g3d_ShapeObj.h  g3d_assert.h  g3d_config.h  g3d_defs.h
include/nw/g3d/fnd/: g3d_GX2Struct.h  g3d_GfxManage.h  g3d_GfxState.h
include/wut/: os.h
src/: CMakeLists.txt
src/nw/: CMakeLists.txt
src/nw/g3d/: CMakeLists.txt  g3d_ShapeObj.cpp
src/nw/g3d/fnd/: CMakeLists.txt  g3d_GfxManage.cpp
src/nw/g3d/math/: CMakeLists.txt
src/nw/g3d/res/: CMakeLists.txt
